--- a/assets/css/components/Modules.scss
+++ b/assets/css/components/Modules.scss
@@ -42,9 +42,9 @@
     // By default, notes aren't shown. We only show them if they are in focused or
     // if they are non-empty. But we cannot set display:none, because the user
     // may call notesInputRef.current.focus() before they become visible.
-    padding: .5rem 0 .2rem 0;
-    left:1rem;
     position: relative; // so we can position `.wf-module .module-notes::before`
+    margin-bottom: .5rem;  
+
     &:not(.visible) {
       overflow: hidden;
       margin: 0;
